[gd_scene load_steps=50 format=3 uid="uid://xxaoff7gwbrm"]

[ext_resource type="Script" path="res://ring/Character-ring/player.gd" id="1_ppel8"]
[ext_resource type="Texture2D" uid="uid://dognk3i7y6aga" path="res://ring/Art-ring/Mossy Assets/BlueWizard(player)/2BlueWizardWalk/Untitled-3.png" id="2_6uul2"]
[ext_resource type="Script" path="res://ring/Character-ring/charactersprite.gd" id="3_f3vb4"]
[ext_resource type="Texture2D" uid="uid://c5sig0ut2mvm2" path="res://ring/Art-ring/Mossy Assets/BlueWizard(player)/2BlueWizardJump/Dash2/Untitled-2.png" id="5_ghtat"]
[ext_resource type="Texture2D" uid="uid://c5eaiwb2j0gcx" path="res://ring/Art-ring/Mossy Assets/BlueWizard(player)/2BlueWizardJump/Untitled-1.png" id="6_corcg"]
[ext_resource type="Texture2D" uid="uid://fd0uyd3who8h" path="res://ring/Art-ring/Mossy Assets/BlueWizard(player)/2BlueWizardIdle/sprite sheet.png" id="7_qcyww"]
[ext_resource type="Script" path="res://ring/Character-ring/CharacterStateMachine.gd" id="8_47hpa"]
[ext_resource type="Script" path="res://ring/Character-ring/GroundState.gd" id="9_p6xmg"]
[ext_resource type="Script" path="res://ring/Character-ring/AirState.gd" id="10_8226m"]
[ext_resource type="Script" path="res://ring/Character-ring/LandingState.gd" id="11_cgx2i"]
[ext_resource type="Script" path="res://ring/Character-ring/Attack.gd" id="12_s5p43"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ry2ya"]
radius = 49.4845
height = 280.412

[sub_resource type="Animation" id="Animation_ujk55"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_luabc"]
resource_name = "atk1"
length = 0.07
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_6uul2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_335pk"]
resource_name = "atk2"
length = 0.1945
step = 0.05

[sub_resource type="Animation" id="Animation_pj308"]
resource_name = "dash"
length = 0.4
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ghtat")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175, 0.2, 0.225, 0.25, 0.275, 0.3, 0.325, 0.35, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_maun6"]
resource_name = "db_jump"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_corcg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_g1gqi"]
resource_name = "fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_corcg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_6csnn"]
resource_name = "idle"
length = 1.9985
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_qcyww")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_dqpvk"]
resource_name = "jump"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_corcg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_4qpm1"]
resource_name = "jump_end"
length = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_6uul2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_hn7l4"]
resource_name = "run"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_6uul2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7ukm"]
_data = {
"RESET": SubResource("Animation_ujk55"),
"atk1": SubResource("Animation_luabc"),
"atk2": SubResource("Animation_335pk"),
"dash": SubResource("Animation_pj308"),
"db_jump": SubResource("Animation_maun6"),
"fall": SubResource("Animation_g1gqi"),
"idle": SubResource("Animation_6csnn"),
"jump": SubResource("Animation_dqpvk"),
"jump_end": SubResource("Animation_4qpm1"),
"run": SubResource("Animation_hn7l4")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gjtl3"]
animation = &"atk1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fkc32"]
animation = &"dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_077sq"]
animation = &"db_jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_be6mx"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c8whn"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_liqnj"]
animation = &"jump_end"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gha3e"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_76n0d"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j4o3g"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_mhdn6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gha3e")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_76n0d")
blend_point_1/pos = 0.0
blend_point_2/node = SubResource("AnimationNodeAnimation_j4o3g")
blend_point_2/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fiyf5"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3arxa"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_taekn"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kv8a1"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ewylx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b4oop"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xohni"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j0uiw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wsn8s"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xlfpq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bxxcp"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_m1mjk"]
states/Start/position = Vector2(-60, 244)
states/atk1/node = SubResource("AnimationNodeAnimation_gjtl3")
states/atk1/position = Vector2(106, 379)
states/dash/node = SubResource("AnimationNodeAnimation_fkc32")
states/dash/position = Vector2(162.149, 143.292)
states/db_jump/node = SubResource("AnimationNodeAnimation_077sq")
states/db_jump/position = Vector2(340, 100)
states/fall/node = SubResource("AnimationNodeAnimation_be6mx")
states/fall/position = Vector2(523, 113)
states/jump/node = SubResource("AnimationNodeAnimation_c8whn")
states/jump/position = Vector2(305, 174)
states/jump_end/node = SubResource("AnimationNodeAnimation_liqnj")
states/jump_end/position = Vector2(636, 236)
states/move/node = SubResource("AnimationNodeBlendSpace1D_mhdn6")
states/move/position = Vector2(137, 244)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_fiyf5"), "move", "jump", SubResource("AnimationNodeStateMachineTransition_3arxa"), "jump", "db_jump", SubResource("AnimationNodeStateMachineTransition_taekn"), "jump_end", "move", SubResource("AnimationNodeStateMachineTransition_kv8a1"), "db_jump", "fall", SubResource("AnimationNodeStateMachineTransition_ewylx"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_b4oop"), "fall", "jump_end", SubResource("AnimationNodeStateMachineTransition_xohni"), "move", "atk1", SubResource("AnimationNodeStateMachineTransition_j0uiw"), "atk1", "move", SubResource("AnimationNodeStateMachineTransition_wsn8s"), "move", "dash", SubResource("AnimationNodeStateMachineTransition_xlfpq"), "dash", "move", SubResource("AnimationNodeStateMachineTransition_bxxcp")]
graph_offset = Vector2(-418.851, 130.31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmntp"]
size = Vector2(98.969, 280.412)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_puagj"]
radius = 32.9897
height = 197.938

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_capjy"]
radius = 51.5464
height = 296.907

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kbjpq"]
size = Vector2(82.165, 29.5876)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.97, 0.97)
collision_layer = 2
collision_mask = 1793
script = ExtResource("1_ppel8")
speed = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.24742)
shape = SubResource("CapsuleShape2D_ry2ya")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-255.67, -255.67)
scale = Vector2(1.99742, 1.99742)
texture = ExtResource("2_6uul2")
centered = false
hframes = 20
script = ExtResource("3_f3vb4")

[node name="firepoint" type="Marker2D" parent="Sprite2D"]
position = Vector2(128, 128)
gizmo_extents = 21.9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_w7ukm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_m1mjk")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = 0.00245297

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("8_47hpa")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Ground")

[node name="Ground" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "attack")]
script = ExtResource("9_p6xmg")
jump_velocity = -1400.0
air_state = NodePath("../Air")
attack = NodePath("../attack")

[node name="Air" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("landing_state")]
script = ExtResource("10_8226m")
double_jump_velocity = -1200.0
landing_state = NodePath("../Landing")
landing_anim = "jump_end"

[node name="Landing" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("11_cgx2i")
landing_animation_name = "jump_end"
ground_state = NodePath("../Ground")

[node name="attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("12_s5p43")
return_state = NodePath("../Ground")
can_move = false

[node name="ring detection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ring detection"]
position = Vector2(1.47475e-06, 8.24743)
shape = SubResource("RectangleShape2D_vmntp")

[node name="portaldetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="portaldetection"]
shape = SubResource("CapsuleShape2D_puagj")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_capjy")

[node name="Timer" type="Timer" parent="hitbox"]
wait_time = 0.2

[node name="jumppad" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="jumppad"]
position = Vector2(0, 145.361)
shape = SubResource("RectangleShape2D_kbjpq")

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Landing" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/attack" method="_on_animation_tree_animation_finished"]
[connection signal="area_shape_entered" from="ring detection" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_entered" from="portaldetection" to="." method="_on_portaldetection_area_entered"]
[connection signal="body_shape_entered" from="hitbox" to="." method="_on_hitbox_body_shape_entered"]
[connection signal="timeout" from="hitbox/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="jumppad" to="." method="_on_jumppad_body_entered"]
[connection signal="body_entered" from="jumppad" to="CharacterStateMachine/Air" method="_on_jumppad_body_entered"]
